--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,14 @@ outcome==1.3.0.post0
 packaging==24.2
 PySocks==1.7.1
 python-dotenv==1.0.1
+pytz==2025.1
 requests==2.32.3
 selenium==4.28.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
 sqlparse==0.5.3
+termcolor==2.5.0
 trio==0.28.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
