--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 asgiref==3.8.1
 attrs==25.1.0
 beautifulsoup4==4.12.3
@@ -5,6 +6,7 @@ certifi==2024.12.14
 charset-normalizer==3.4.1
 dj-database-url==2.3.0
 Django==5.1.5
+django-ninja==1.3.0
 django-vite==3.0.6
 gunicorn==23.0.0
 h11==0.14.0
@@ -12,6 +14,8 @@ idna==3.10
 lxml==5.3.0
 outcome==1.3.0.post0
 packaging==24.2
+pydantic==2.10.6
+pydantic_core==2.27.2
 PySocks==1.7.1
 python-dotenv==1.0.1
 pytz==2025.1
